Revert "- К сущностям Book, Order, Request добавлены поля id"
This reverts commit b1f6ccc2dd9420c0d25a04cdf818ba4e493c202d.